--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
     <div class=  "split left">
         <div class="centered"> 
             <h2>Balaji</h2>
+            <a href="https://www.hotstar.com/in">hotstar</a>
         </div>
     </div>    
     <div class=  "split right">
         <div class="centered"> 
             <h2>Balu</h2>
         </div>
-    </div>    
+    </div>
+    
 </body>
 </html>
